[remoting host] Fix div-by-zero in LeakyBucket

When receiving a bandwidth estimate of 0 from WebRTC, the host should
pause the video stream without crashing. This CL is a simple fix which
sets the bucket-emptying time to 1 minute if the rate is set to 0. This
is similar to what we already do in
FrameProcessingTimeEstimator::EstimatedTransitTime().

Bug: 806918
Change-Id: I43bf24cf54250cc3856adeb4c49809733320d46b
Reviewed-on: https://chromium-review.googlesource.com/891671
Reviewed-by: Joe Downing <joedow@chromium.org>
Commit-Queue: Lambros Lambrou <lambroslambrou@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532567}
Former-commit-id: e0ef90bec5de7875e0cd13ccdb7b7ada0d85078b